--- a/vue-src/src/plugins/i18n/locales/id.json
+++ b/vue-src/src/plugins/i18n/locales/id.json
@@ -85,6 +85,5 @@
   "Table": "Tabel",
   "Chart": "Grafik",
   "Chart View": "Grafik",
-  "Produced": "Produksi",
-  "Producer": "Produsen"
+  "Produced": "Produksi"
 }
