--- a/vue-src/src/plugins/i18n/locales/id.json
+++ b/vue-src/src/plugins/i18n/locales/id.json
@@ -30,11 +30,11 @@
   "Name": "Nama",
   "Type": "Tipe",
   "Updated at": "Diperbaharui",
-  "My Cases": "Kes Saya",
-  "case": "kes",
-  "Case": "Kes",
-  "Cases": "Kes-kes",
-  "cases": "kes",
+  "My Cases": "Case Saya",
+  "case": "case",
+  "Case": "Case",
+  "Cases": "Cases",
+  "cases": "case",
   "List of ": "Daftar {0}",
   "Summary of ": "Ringkasan untuk {0}",
   "Monetary": "Keuangan",
