--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2024-5-26:
+update webapp:
+- upd dashboard: (+)"Case comparison"
+- upd filesystem: (+)sens. data, (+)data/result montecarlo, (+)allow list of drive (psutil lib. used)
+- upd uncertainty: (+)summary (P10,P50,P90) card
+--------------------------------------------------------------------------------------
 2024-5-21:
 update webapp:
 - fix axis scale (sensitivity chart)
